[package]
name = "path_helper"
version = "0.1.0"
description = "简单易用的路径处理库"
edition = "2021"
authors = ["share121 <me@s121.top>"]
homepage = "https://github.com/share121/path_helper"
repository = "https://github.com/share121/path_helper"
license = "MIT"
keywords = ["path", "filename", "sanitize", "unique", "utility"]
categories = ["filesystem"]

[dependencies]
sanitize-filename = { version = "0.6.0", optional = true }
tokio = { version = "1.51.0", features = ["fs"], optional = true }

[features]
sanitize = ["dep:sanitize-filename"]
tokio = ["dep:tokio"]

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# restriction = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
