[package]
name = "path_helper"
version = "0.1.6"
description = "简单易用的路径处理库"
edition = "2021"
authors = ["share121 <me@s121.top>"]
homepage = "https://github.com/share121/path_helper"
repository = "https://github.com/share121/path_helper"
license = "MIT"
keywords = ["path", "filename", "sanitize", "unique", "utility"]
categories = ["filesystem"]

[dependencies]
mime_guess = { version = "2.0.5", optional = true }
sanitize-filename = { version = "0.6.0", optional = true }
tokio = { version = "1.51.0", features = ["fs", "io-util"], optional = true }

[features]
sanitize = ["dep:sanitize-filename"]
auto_ext = ["dep:mime_guess"]
tokio = ["dep:tokio"]

[lints.clippy]
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# restriction = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
nursery = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
